@@ -19,6 +19,7 @@ Other features
 * Look through the target link and target page slug (in addition to the old slug) when searching for redirects in the admin (Michael Harrison)
 * Remove support for IE6 to IE9 from project template (Samir Shah)
 * Remove outdated X-UA-Compatible meta from admin template  (Thibaud Colas)
+* Add JavaScript source maps in production build for packaged Wagtail (Thibaud Colas)
 
 Bug fixes
 ~~~~~~~~~
